# obsidianwall-verdict

./: .dockerignore  .gitignore  Dockerfile  Makefile  Python Commands  README.md  action.yml  my_notes.md  pyproject.toml  requirements.txt
. github/workflows/: ci.yml  release.yml  staging-promote.yml  verdict-ci.yml
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh  requirements.txt
.github/workflows/: ci.yml  release.yml  staging-promote.yml  verdict-ci.yml
Dev_Docs/Dev_Notes_Docs_for_Obsidianwall_Verdict/: AI_Layer.md  MVP_Now.md
Dev_Docs/Dev_Notes_Docs_for_Obsidianwall_Verdict/obsidianwall_platform_architecture_v1/: obsidianwall-platform-architecture_v0.2.md
Dev_Docs/Obsidianwall_platform_Docs/: notes_v0.2
Dev_Notes_Docs/: DevNotes.md
Dev_Notes_Docs/obsidianwall_platform_architecture_v1/: obsidianwall_platform_architecture_v0.1.md
Dev_Notes_Docs_for_Obsidianwall_Verdict/obsidianwall_platform_architecture_v1/: obsidianwall-platform-architecture_v0.2.mermaid
Dev_Notes_Docs_for_Obsidianwall_Verdict/obsidianwall_platform_architecture_v2/: obsidianwall_platform_architecture_v0.1.md
Obsidianwall_platform_Docs/: notes.md
audit/: audit_logger.py
cli/: main.py
context/: context_builder.py  terraform_parser.py
docs/: github-actions-example.yml  quickstart.md
engine/: condition_evaluator.py  context_loader.py  cost_estimator.py  decision_resolver.py  evaluator.py  lint_validator.py  loader.py  optimization_catalog.py  orchestrator.py  policy_loader.py  policy_normalizer.py  recommender.py  resolver.py  risk_scorer.py  validator.py
engine/analyzers/: __init__.py  architecture_analyzer.py  cost_analyzer.py  topology_analyzer.py  utilization_analyzer.py
engine/explainability/: __init__.py  explanation_builder.py  governance_reasoning_chain.py  policy_reasoning.py  recommendation_explainer.py  trace_graph.py
engine/replay/: __init__.py  replay_engine.py  replay_schema.py  simulation_engine.py
engine/workflows/: __init__.py  approval_resolver.py  notification_router.py
logging/: audit_logger.py
my_notes/: ObsidianWall_Verdict_current_development_estemate.md  Python Commands  Python Commands.md  Verdict_current_and_future_architecture_maturity.md  architectural_moat.md  evaluation_module.md  future_adds_to_obsidianwall.md  monetization.md  my_moat.md  my_notes_about_cli_main.md  notes_about_optimization_catalog_module.md  notes_about_recommender_module.md  notes_on_the_policy_nnormalizer_module.md  now_and_future.md  obsidianwall_future_and_products.md  obsidianwall_verdict_architecture_flow.md  upgrading_recommender_and_optimization_catalog._modulemd
output/: result.json
policies/: cost_policy.yaml
policies/ai_governance/: basic_ai_governance.yaml
policies/compliance/: tagging_compliance.yaml
policies/cost/: basic_budget.yaml  strict_budget.yaml  strict_policy.yaml
policies/data_governance/: basic_data_governance.yaml
policies/identity/: basic_identity.yaml
policies/network/: basic_network.yaml
policies/resilience/: basic_resilience.yaml
policies/resource_limits/: basic_resource_limits.yaml
policies/security/: basic_security.yaml
policy/: schema.py
policy/examples/: cost_policy.yaml
samples/: plan_over_budget.json  plan_under_budget.json  terraform_plan.json  test_engine.py
schemas/: policy_schema.py
scripts/: parse_verdict_output.py
tests/: test_engine.py  test_policy.py
tests/integration/: test_evaluate_pipeline.py
tests/unit/: test_condition_evaluator.py  test_policy_normalizer.py  test_recommender.py  test_risk_scorer.py
utils/: logger.py
verdict-venv/: pyvenv.cfg
